--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,21 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activity.HistoryActivity" />
         <activity android:name=".activity.PermissionActivity">
+        </activity>
+        <activity
+            android:name=".activity.MakeChannelActivity"
+            android:theme="@style/AppTheme" />
+
+        <activity android:name=".activity.TestActivity">
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".activity.MakeChannelActivity"
-            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
